[package]
name = "bot-framework"
version = "0.1.1"
authors = ["Gustavo Aguiar <gugahoa@gmail.com>"]
edition = "2018"
description = "A Telegram Bot framework"
repository = "https://github.com/telegram-rs/bot-framework"
license = "MIT"
keywords = ["telegram", "bot", "framework"]
readme = "README.md"

[badges]
maintenance = { status = "experimental" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
telegram-bot = "0.6"
tokio-core = "0.1"
futures = "0.1"
